--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_BASE_URL=https://developer.github.com/v3/
+REACT_APP_API_BASE_URL=https://api.github.com
 REACT_APP_PROJECT_NAME=GitSearch
