--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-helmet": "^6.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "react-toastify": "^6.0.8",
     "resolve": "^1.15.0",
     "resolve-url-loader": "^3.1.1",
     "styled-components": "^5.1.1",
