--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-bootstrap": "^1.0.1",
     "react-content-loader": "^5.1.0",
     "react-dev-utils": "^10.2.1",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-router-dom": "^5.2.0",
